--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   gtag('config', 'G-3RHYG00Q87');
   function trackWhatsApp() { gtag('event', 'whatsapp_click', { 'event_category': 'Contact', 'event_label': 'Floating Button', 'value': 1 }); }
 </script>
+
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ד״ר בנימין ריינשטיין | מרפאת שיניים בירושלים | עזרה ראשונה והשתלות</title>
-<meta name="description" content="זקוקים לרופא שיניים בירושלים? ד״ר בנימין ריינשטיין מציע טיפולי שיניים מתקדמים, השתלות וטיפולי חירום דנטליים בשעות הערב ובסופי שבוע באווירה רגועה ומקצועית.">
+<meta name="description" content="זקוקים לרופא שיניים בירושלים? ד״ר בנימין ריינשטיין מציע טיפולי שיניים מתקדמים, השתלות וטיפולי חירום דנטליים באווירה רגועה ומקצועית.">
+
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><path d=%22M50,10 Q70,10 80,30 Q90,50 80,70 Q70,90 50,85 Q30,90 20,70 Q10,50 20,30 Q30,10 50,10 Z%22 fill=%22%230056b3%22/><circle cx=%2240%22 cy=%2240%22 r=%225%22 fill=%22white%22/><circle cx=%2260%22 cy=%2240%22 r=%225%22 fill=%22white%22/></svg>">
+
 <style>
 html, body { margin: 0; padding: 0; overflow-x: hidden; scroll-behavior: smooth; }
 :root { --bg-light: #f4f7ff; --primary: #0056b3; --text: #333; --radius: 14px; }
@@ -46,26 +50,30 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
 </style>
 </head>
 <body>
+
 <div class="topbar">
   <div class="lang-dropdown">
     <button class="lang-btn" onclick="toggleMenu()">HE ▾</button>
     <div class="lang-menu" id="lang-menu">
-      <button onclick="window.location.href='en.html'">English</button>
-      <button onclick="window.location.href='index.html'">עברית</button>
-      <button onclick="window.location.href='fr.html'">Français</button>
+      <button onclick="window.location.href='/en/'">English</button>
+      <button onclick="window.location.href='/'">עברית</button>
+      <button onclick="window.location.href='/fr/'">Français</button>
     </div>
   </div>
   <a href="tel:0533852030" class="top-phone">053-385-2030</a>
 </div>
+
 <header>
   <video autoplay muted loop playsinline><source src="video.mp4" type="video/mp4"></video>
   <div class="header-content"><h1>ד״ר בנימין ריינשטיין</h1><p>מרפאת שיניים בירושלים</p></div>
 </header>
+
 <nav class="tabs-nav">
   <button class="tab-link active" onclick="openTab(event, 'about-tab')">אודות המרפאה</button>
   <button class="tab-link" onclick="openTab(event, 'services-tab')">שירותים</button>
   <button class="tab-link" onclick="openTab(event, 'emergencies-tab')">עזרה ראשונה</button>
 </nav>
+
 <main class="container">
   <section id="about-tab" class="tab-content active">
     <h2>אודות המרפאה</h2>
@@ -81,8 +89,9 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
     <p><b>טלפון:</b> 053-385-2030</p>
     <p><b>אימייל:</b> BenjaminReinstein@gmail.com</p>
     <h2>מיקום</h2>
-    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.20455806655!2d35.21855907573523!3d31.78253167409477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502d73307613587%3A0x679093844f23b7e2!2sShamai%20St%2014%2C%20Jerusalem!5e0!3m2!1sen!2sil!4v1700000000000" loading="lazy"></iframe>
+    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.879788019316!2d35.2185461!3d31.780182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502d72856012423%3A0xc3f837130e527237!2sShamai%20St%2014%2C%20Jerusalem!5e0!3m2!1sen!2sil!4v1700000000000" loading="lazy"></iframe>
   </section>
+
   <section id="services-tab" class="tab-content">
     <h2>המרפאה שלנו מתמחה בטיפולים הבאים:</h2>
     <div class="grid-list">
@@ -95,6 +104,7 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
       <div class="box"><h3>רפואת שיניים לילדים</h3><p>טיפולים באווירה סבלנית ורגועה המותאמים לילדים.</p></div>
     </div>
   </section>
+
   <section id="emergencies-tab" class="tab-content">
     <h2>עזרה ראשונה דנטלית</h2>
     <p>זקוקים לעזרה דחופה? אנו מספקים מענה מהיר לכאבים חריפים בשעות הערב ובסופי שבוע.</p>
@@ -106,15 +116,17 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
     </div>
   </section>
 </main>
+
 <footer style="background:#111;color:white;text-align:center;padding:25px; margin-top: 40px;">© 2025 ד״ר בנימין ריינשטיין</footer>
+
 <a href="https://wa.me/972533852030?text=שלום, אשמח לקבוע תור בבקשה." class="whatsapp-float" target="_blank" onclick="trackWhatsApp()"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
+
 <script>
 function openTab(evt, tabId) {
   document.querySelectorAll(".tab-content").forEach(c => c.classList.remove("active"));
   document.querySelectorAll(".tab-link").forEach(l => l.classList.remove("active"));
   document.getElementById(tabId).classList.add("active");
   evt.currentTarget.classList.add("active");
-  window.scrollTo(0, 300);
 }
 function toggleMenu() {
   const m = document.getElementById("lang-menu");
