--- a/fr/index.html
+++ b/fr/index.html
@@ -13,8 +13,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Dr. Benjamin Reinstein | Dentiste à Jérusalem | Urgences et Implants</title>
 <meta name="description" content="Cherchez-vous un dentiste à Jérusalem ? Le Dr. Benjamin Reinstein propose des soins dentaires avancés, des implants et des urgences.">
+
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><path d=%22M50,10 Q70,10 80,30 Q90,50 80,70 Q70,90 50,85 Q30,90 20,70 Q10,50 20,30 Q30,10 50,10 Z%22 fill=%22%230056b3%22/><circle cx=%2240%22 cy=%2240%22 r=%225%22 fill=%22white%22/><circle cx=%2260%22 cy=%2240%22 r=%225%22 fill=%22white%22/></svg>">
+
 <style>
-/* CSS copied from Hebrew, direction set to LTR */
 html, body { margin: 0; padding: 0; overflow-x: hidden; scroll-behavior: smooth; }
 :root { --bg-light: #f4f7ff; --primary: #0056b3; --text: #333; --radius: 14px; }
 body { background: var(--bg-light); font-family: "Segoe UI", Arial, sans-serif; line-height: 1.6; color: var(--text); direction: ltr; }
@@ -51,15 +53,15 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
   <div class="lang-dropdown">
     <button class="lang-btn" onclick="toggleMenu()">FR ▾</button>
     <div class="lang-menu" id="lang-menu">
-      <button onclick="window.location.href='en.html'">English</button>
-      <button onclick="window.location.href='index.html'">עברית</button>
-      <button onclick="window.location.href='fr.html'">Français</button>
+      <button onclick="window.location.href='/en/'">English</button>
+      <button onclick="window.location.href='/'">עברית</button>
+      <button onclick="window.location.href='/fr/'">Français</button>
     </div>
   </div>
   <a href="tel:0533852030" class="top-phone">053-385-2030</a>
 </div>
 <header>
-  <video autoplay muted loop playsinline><source src="video.mp4" type="video/mp4"></video>
+  <video autoplay muted loop playsinline><source src="../video.mp4" type="video/mp4"></video>
   <div class="header-content"><h1>Dr. Benjamin Reinstein</h1><p>Clinique Dentaire Jérusalem</p></div>
 </header>
 <nav class="tabs-nav">
@@ -82,7 +84,7 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
     <p><b>Tél:</b> 053-385-2030</p>
     <p><b>Email:</b> BenjaminReinstein@gmail.com</p>
     <h2>Localisation</h2>
-    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.20455806655!2d35.21855907573523!3d31.78253167409477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502d73307613587%3A0x679093844f23b7e2!2sShamai%20St%2014%2C%20Jerusalem!5e0!3m2!1sen!2sil!4v1700000000000" loading="lazy"></iframe>
+    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.2155!2d35.2137!3d31.7683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzA1LjkiTiAzNcKwMTInNDkuMyJF!5e0!3m2!1sen!2sil!4v1620000000000!5m2!1sen!2sil" loading="lazy"></iframe>
   </section>
   <section id="services-tab" class="tab-content">
     <h2>Nos Spécialités :</h2>
@@ -115,7 +117,6 @@ function openTab(evt, tabId) {
   document.querySelectorAll(".tab-link").forEach(l => l.classList.remove("active"));
   document.getElementById(tabId).classList.add("active");
   evt.currentTarget.classList.add("active");
-  window.scrollTo(0, 300);
 }
 function toggleMenu() {
   const m = document.getElementById("lang-menu");
