Update index.html with new title and contact info

--- a/en/index.html
+++ b/en/index.html
@@ -11,10 +11,12 @@
 </script>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Dr. Benjamin Reinstein | Dentist in Jerusalem | Emergency & Implants</title>
-<meta name="description" content="Looking for a dentist in Jerusalem? Dr. Benjamin Reinstein offers advanced dental treatments, implants, and emergency care.">
+<title>Dr. Benjamin Reinstein | Dentist in Jerusalem</title>
 
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><path d=%22M50,10 Q70,10 80,30 Q90,50 80,70 Q70,90 50,85 Q30,90 20,70 Q10,50 20,30 Q30,10 50,10 Z%22 fill=%22%230056b3%22/><circle cx=%2240%22 cy=%2240%22 r=%225%22 fill=%22white%22/><circle cx=%2260%22 cy=%2240%22 r=%225%22 fill=%22white%22/></svg>">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 
 <style>
 html, body { margin: 0; padding: 0; overflow-x: hidden; scroll-behavior: smooth; }
@@ -39,11 +41,12 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
 .tab-content { display: none; animation: fadeIn 0.4s ease; }
 .tab-content.active { display: block; }
 @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-.grid-list { display: flex; flex-wrap: wrap; justify-content: center; gap: 22px; margin-top: 30px; }
+.grid-list { display: flex; flex-wrap: wrap; justify-content: center; gap: 22px; margin: 20px 0; }
 .box { background: white; padding: 25px; border-radius: var(--radius); box-shadow: 0 4px 12px rgba(0,0,0,0.05); text-align: center; flex: 0 1 calc(33.333% - 22px); min-width: 280px; border: 1px solid transparent; box-sizing: border-box; }
 .box h3 { margin-top: 0; color: var(--primary); font-size: 1.25rem; }
 .whatsapp-float { position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px; z-index: 9999; }
 .whatsapp-float img { width: 100%; height: 100%; border-radius: 50%; box-shadow: 0 4px 12px rgba(0,0,0,0.3); }
+.footer-info { margin-top: 40px; padding-top: 20px; border-top: 1px solid #ddd; }
 @media (max-width: 900px) { .box { flex: 0 1 calc(50% - 22px); } }
 @media (max-width: 600px) { .box { flex: 1 1 100%; } }
 </style>
@@ -72,42 +75,41 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
 <main class="container">
   <section id="about-tab" class="tab-content active">
     <h2>About the Clinic</h2>
-    <p>At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere, with personal attention and an emphasis on patient comfort. We specialize in conservative treatments, rehabilitation, surgery, and implants using modern equipment to improve your treatment experience and smile aesthetics.</p>
+    <p>At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere, with personal attention and an emphasis on patient comfort.</p>
     <p><b>About Dr. Benjamin Reinstein:</b></p>
     <ul>
       <li><b>Dr. Reinstein</b> holds a DMD from the Faculty of Dental Medicine of the <b>Hebrew University and Hadassah Ein Kerem</b>.</li>
-      <li>Graduated from advanced training in oral rehabilitation, complex root canal therapy, and surgical extractions at <b>Sheba Medical Center</b>.</li>
+      <li>Advanced training at <b>Sheba Medical Center</b> in oral rehabilitation and complex root canals.</li>
       <li>Member of the Israeli Association of Dental Implants.</li>
-      <li>Recipient of the IDF Medical Services Excellence Award for managing military dental clinics.</li>
+      <li>Recipient of the IDF Medical Services Excellence Award.</li>
     </ul>
-    <h2>Contact Us</h2>
-    <p><b>Phone:</b> 053-385-2030</p>
-    <p><b>Email:</b> BenjaminReinstein@gmail.com</p>
-    <h2>Location</h2>
-    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.2155!2d35.2137!3d31.7683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzA1LjkiTiAzNcKwMTInNDkuMyJF!5e0!3m2!1sen!2sil!4v1620000000000!5m2!1sen!2sil" loading="lazy"></iframe>
   </section>
   <section id="services-tab" class="tab-content">
     <h2>Our Specialties:</h2>
     <div class="grid-list">
-      <div class="box"><h3>General Dentistry</h3><p>Routine check-ups, cleaning, and conservative treatments.</p></div>
-      <div class="box"><h3>Cosmetic Dentistry</h3><p>Teeth whitening, porcelain veneers, and restorations.</p></div>
-      <div class="box"><h3>Dental Implants</h3><p>Restoring missing teeth using advanced implant methods.</p></div>
-      <div class="box"><h3>Oral Rehabilitation</h3><p>Customized crowns, bridges, and dentures.</p></div>
-      <div class="box"><h3>Root Canal Therapy</h3><p>Precise treatments to save damaged teeth.</p></div>
-      <div class="box"><h3>Periodontal Care</h3><p>Prevention and treatment of gum disease.</p></div>
-      <div class="box"><h3>Pediatric Dentistry</h3><p>Gentle care tailored for children.</p></div>
+      <div class="box"><h3>General Dentistry</h3><p>Routine check-ups and cleanings.</p></div>
+      <div class="box"><h3>Cosmetic Dentistry</h3><p>Whitening and veneers.</p></div>
+      <div class="box"><h3>Dental Implants</h3><p>Restoring missing teeth.</p></div>
+      <div class="box"><h3>Oral Rehabilitation</h3><p>Crowns and bridges.</p></div>
+      <div class="box"><h3>Root Canal</h3><p>Precise treatments.</p></div>
+      <div class="box"><h3>Periodontal Care</h3><p>Gum disease treatment.</p></div>
     </div>
   </section>
   <section id="emergencies-tab" class="tab-content">
     <h2>Emergency Care</h2>
-    <p>Need urgent help? We provide rapid response during evenings and weekends.</p>
+    <p>Rapid response during evenings and weekends.</p>
     <div class="grid-list">
-      <div class="box"><h3>Tooth Pain</h3><p>Immediate relief for sharp or throbbing pain.</p></div>
-      <div class="box"><h3>Broken Tooth</h3><p>Emergency care following trauma.</p></div>
-      <div class="box"><h3>Swelling</h3><p>Treatment for acute infections and inflammation.</p></div>
-      <div class="box"><h3>Bleeding</h3><p>First aid for oral tissue injuries.</p></div>
+      <div class="box"><h3>Tooth Pain</h3><p>Immediate relief.</p></div>
+      <div class="box"><h3>Broken Tooth</h3><p>Emergency trauma care.</p></div>
     </div>
   </section>
+  <div class="footer-info">
+    <h2>Contact Us</h2>
+    <p><b>Phone:</b> 053-385-2030</p>
+    <p><b>Email:</b> BenjaminReinstein@gmail.com</p>
+    <h2>Location</h2>
+    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.871587522533!2d35.2120!3d31.7719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzE4LjgiTiAzNcKwMTInNDMuMiJF!5e0!3m2!1sen!2sil!4v1700000000000" loading="lazy"></iframe>
+  </div>
 </main>
 <footer style="background:#111;color:white;text-align:center;padding:25px; margin-top: 40px;">© 2025 Dr. Benjamin Reinstein</footer>
 <a href="https://wa.me/972533852030?text=Hi, I would like to book an appointment." class="whatsapp-float" target="_blank" onclick="trackWhatsApp()"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
