Update title and content in index.html

--- a/fr/index.html
+++ b/fr/index.html
@@ -11,7 +11,7 @@
 </script>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Dr. Benjamin Reinstein | Dentiste à Jérusalem</title>
+<title>Dr. Benjamin Reinstein | Clinique Dentaire Jérusalem</title>
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -57,7 +57,7 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
     <button class="lang-btn" onclick="toggleMenu()">FR ▾</button>
     <div class="lang-menu" id="lang-menu">
       <button onclick="window.location.href='/en/'">English</button>
-      <button onclick="window.location.href='/'">עברית</button>
+      <button onclick="window.location.href='/'">Hébreu</button>
       <button onclick="window.location.href='/fr/'">Français</button>
     </div>
   </div>
@@ -65,47 +65,63 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
 </div>
 <header>
   <video autoplay muted loop playsinline><source src="../video.mp4" type="video/mp4"></video>
-  <div class="header-content"><h1>Dr. Benjamin Reinstein</h1><p>Clinique Dentaire Jérusalem</p></div>
+  <div class="header-content"><h1>Dr. Benjamin Reinstein</h1><p>Clinique dentaire à Jérusalem</p></div>
 </header>
 <nav class="tabs-nav">
   <button class="tab-link active" onclick="openTab(event, 'about-tab')">À Propos</button>
   <button class="tab-link" onclick="openTab(event, 'services-tab')">Services</button>
   <button class="tab-link" onclick="openTab(event, 'emergencies-tab')">Urgences</button>
 </nav>
+
 <main class="container">
   <section id="about-tab" class="tab-content active">
     <h2>À Propos de la Clinique</h2>
-    <p>Soins dentaires de pointe dans une atmosphère détendue.</p>
-    <p><b>À propos du Dr. Benjamin Reinstein :</b></p>
+    <p>Dans notre clinique, vous bénéficierez de traitements dentaires avancés dans une atmosphère détendue, avec une attention personnelle et un accent mis sur le confort du patient. Nous sommes spécialisés dans les traitements conservateurs, la réhabilitation, la chirurgie et les implants à l'aide d'équipements modernes pour améliorer votre expérience de traitement et l'esthétique de votre sourire.</p>
+    <p><b>À propos du Dr Benjamin Reinstein :</b></p>
     <ul>
-      <li>DMD de l'<b>Université hébraïque et Hadassah Ein Kerem</b>.</li>
-      <li>Spécialisation à <b>Sheba Medical Center</b>.</li>
+      <li>Le <b>Dr Reinstein</b> est titulaire d'un diplôme DMD de la Faculté de médecine dentaire de <b>l'Université hébraïque et Hadassah Ein Kerem</b>.</li>
+      <li>Diplômé d'une formation avancée en réhabilitation orale, en thérapie complexe du canal radiculaire et en extractions chirurgicales au <b>centre médical Sheba</b>.</li>
       <li>Membre de l'Association israélienne des implants dentaires.</li>
-      <li>Prix d'excellence de Tsahal.</li>
+      <li>Récipiendaire du prix d'excellence des services médicaux de Tsahal pour la gestion de cliniques militaires.</li>
     </ul>
   </section>
+
   <section id="services-tab" class="tab-content">
-    <h2>Nos Spécialités :</h2>
+    <h2>Nos Spécialités</h2>
     <div class="grid-list">
-      <div class="box"><h3>Générale</h3><p>Détartrage et examens.</p></div>
-      <div class="box"><h3>Esthétique</h3><p>Blanchiment et facettes.</p></div>
-      <div class="box"><h3>Implants</h3><p>Remplacement de dents.</p></div>
+      <div class="box"><h3>Dentisterie Générale</h3><p>Examens périodiques, nettoyage et traitements conservateurs.</p></div>
+      <div class="box"><h3>Esthétique Dentaire</h3><p>Blanchiment des dents, facettes en porcelaine et restaurations esthétiques.</p></div>
+      <div class="box"><h3>Implants Dentaires</h3><p>Restauration de dents manquantes à l'aide de méthodes d'implantation avancées.</p></div>
+      <div class="box"><h3>Réhabilitation Orale</h3><p>Couronnes, ponts et prothèses personnalisés.</p></div>
+      <div class="box"><h3>Traitement de Canal</h3><p>Traitements précis pour sauver les dents endommagées.</p></div>
+      <div class="box"><h3>Soins Parodontaux</h3><p>Prévention et traitement des maladies des gencives pour maintenir la stabilité.</p></div>
+      <div class="box"><h3>Dentisterie Pédiatrique</h3><p>Traitements dans une ambiance patiente et calme adaptée aux enfants.</p></div>
     </div>
   </section>
+
   <section id="emergencies-tab" class="tab-content">
-    <h2>Services d'urgence</h2>
-    <p>Réponse rapide soir et week-end.</p>
+    <h2>Urgences Dentaires</h2>
+    <p>Besoin d'une aide urgente ? Nous offrons une réponse rapide aux douleurs aiguës le soir et le week-end.</p>
+    <div class="grid-list">
+      <div class="box"><h3>Douleur Dentaire</h3><p>Traitement immédiat pour une douleur vive ou lancinante.</p></div>
+      <div class="box"><h3>Dent Cassée</h3><p>Traitement d'urgence après un traumatisme ou une chute.</p></div>
+      <div class="box"><h3>Gonflement et Infection</h3><p>Traitement des infections aiguës et des gonflements.</p></div>
+      <div class="box"><h3>Saignement</h3><p>Premiers soins pour les blessures aux tissus buccaux.</p></div>
+    </div>
   </section>
+
   <div class="footer-info">
-    <h2>Contact</h2>
-    <p><b>Tél:</b> 053-385-2030</p>
+    <h2>Contactez-nous</h2>
+    <p><b>Téléphone:</b> 053-385-2030</p>
     <p><b>Email:</b> BenjaminReinstein@gmail.com</p>
     <h2>Localisation</h2>
-    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.871587522533!2d35.2120!3d31.7719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzE4LjgiTiAzNcKwMTInNDMuMiJF!5e0!3m2!1sen!2sil!4v1700000000000" loading="lazy"></iframe>
+    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.215574510344!2d35.2104!3d31.7719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzE4LjgiTiAzNcKwMTInMzcuNCJF!5e0!3m2!1sen!2sil!4v1620000000000!5m2!1sen!2sil" loading="lazy"></iframe>
   </div>
 </main>
+
 <footer style="background:#111;color:white;text-align:center;padding:25px; margin-top: 40px;">© 2025 Dr. Benjamin Reinstein</footer>
 <a href="https://wa.me/972533852030?text=Bonjour, j'aimerais prendre rendez-vous." class="whatsapp-float" target="_blank" onclick="trackWhatsApp()"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
+
 <script>
 function openTab(evt, tabId) {
   document.querySelectorAll(".tab-content").forEach(c => c.classList.remove("active"));
