--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,7 @@
 </script>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Dr. Benjamin Reinstein | Dentist in Jerusalem</title>
+<title>Dr. Benjamin Reinstein | Jerusalem Dental Clinic</title>
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -57,62 +57,71 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
     <button class="lang-btn" onclick="toggleMenu()">EN ▾</button>
     <div class="lang-menu" id="lang-menu">
       <button onclick="window.location.href='/en/'">English</button>
-      <button onclick="window.location.href='/'">עברית</button>
-      <button onclick="window.location.href='/fr/'">Français</button>
+      <button onclick="window.location.href='/'">Hebrew</button>
+      <button onclick="window.location.href='/fr/'">French</button>
     </div>
   </div>
   <a href="tel:0533852030" class="top-phone">053-385-2030</a>
 </div>
 <header>
   <video autoplay muted loop playsinline><source src="../video.mp4" type="video/mp4"></video>
-  <div class="header-content"><h1>Dr. Benjamin Reinstein</h1><p>Jerusalem Dental Clinic</p></div>
+  <div class="header-content"><h1>Dr. Benjamin Reinstein</h1><p>Dental Clinic in Jerusalem</p></div>
 </header>
 <nav class="tabs-nav">
   <button class="tab-link active" onclick="openTab(event, 'about-tab')">About</button>
   <button class="tab-link" onclick="openTab(event, 'services-tab')">Services</button>
   <button class="tab-link" onclick="openTab(event, 'emergencies-tab')">Emergency</button>
 </nav>
+
 <main class="container">
   <section id="about-tab" class="tab-content active">
     <h2>About the Clinic</h2>
-    <p>At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere, with personal attention and an emphasis on patient comfort.</p>
+    <p>At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere, with personal attention and an emphasis on patient comfort. We specialize in conservative treatments, rehabilitation, surgery, and implants using modern equipment to improve your treatment experience and smile aesthetics.</p>
     <p><b>About Dr. Benjamin Reinstein:</b></p>
     <ul>
-      <li><b>Dr. Reinstein</b> holds a DMD from the Faculty of Dental Medicine of the <b>Hebrew University and Hadassah Ein Kerem</b>.</li>
-      <li>Advanced training at <b>Sheba Medical Center</b> in oral rehabilitation and complex root canals.</li>
+      <li><b>Dr. Reinstein</b> holds a DMD degree from the Faculty of Dental Medicine of the <b>Hebrew University and Hadassah Ein Kerem</b>.</li>
+      <li>Graduated from advanced training in oral rehabilitation, complex root canal therapy, and surgical extractions at <b>Sheba Medical Center</b>.</li>
       <li>Member of the Israeli Association of Dental Implants.</li>
-      <li>Recipient of the IDF Medical Services Excellence Award.</li>
+      <li>Recipient of the IDF Medical Services Excellence Award for managing military clinics.</li>
     </ul>
   </section>
+
   <section id="services-tab" class="tab-content">
-    <h2>Our Specialties:</h2>
+    <h2>Our Specialties</h2>
     <div class="grid-list">
-      <div class="box"><h3>General Dentistry</h3><p>Routine check-ups and cleanings.</p></div>
-      <div class="box"><h3>Cosmetic Dentistry</h3><p>Whitening and veneers.</p></div>
-      <div class="box"><h3>Dental Implants</h3><p>Restoring missing teeth.</p></div>
-      <div class="box"><h3>Oral Rehabilitation</h3><p>Crowns and bridges.</p></div>
-      <div class="box"><h3>Root Canal</h3><p>Precise treatments.</p></div>
-      <div class="box"><h3>Periodontal Care</h3><p>Gum disease treatment.</p></div>
+      <div class="box"><h3>General Dentistry</h3><p>Routine check-ups, cleaning, and conservative treatments.</p></div>
+      <div class="box"><h3>Cosmetic Dentistry</h3><p>Teeth whitening, porcelain veneers, and aesthetic restorations.</p></div>
+      <div class="box"><h3>Dental Implants</h3><p>Restoring missing teeth using advanced implant methods.</p></div>
+      <div class="box"><h3>Oral Rehabilitation</h3><p>Customized crowns, bridges, and dentures.</p></div>
+      <div class="box"><h3>Root Canal Therapy</h3><p>Precise treatments to save damaged teeth.</p></div>
+      <div class="box"><h3>Periodontal Care</h3><p>Prevention and treatment of gum disease to maintain stability.</p></div>
+      <div class="box"><h3>Pediatric Dentistry</h3><p>Treatments in a patient and calm atmosphere tailored for children.</p></div>
     </div>
   </section>
+
   <section id="emergencies-tab" class="tab-content">
-    <h2>Emergency Care</h2>
-    <p>Rapid response during evenings and weekends.</p>
+    <h2>Dental Emergency</h2>
+    <p>Need urgent help? We provide rapid response to acute pain during evenings and weekends.</p>
     <div class="grid-list">
-      <div class="box"><h3>Tooth Pain</h3><p>Immediate relief.</p></div>
-      <div class="box"><h3>Broken Tooth</h3><p>Emergency trauma care.</p></div>
+      <div class="box"><h3>Tooth Pain</h3><p>Immediate treatment for sharp or throbbing pain.</p></div>
+      <div class="box"><h3>Broken Tooth</h3><p>Emergency treatment following trauma or a fall.</p></div>
+      <div class="box"><h3>Swelling & Infection</h3><p>Treatment for acute infections and swelling.</p></div>
+      <div class="box"><h3>Bleeding</h3><p>First aid for oral tissue injuries.</p></div>
     </div>
   </section>
+
   <div class="footer-info">
     <h2>Contact Us</h2>
     <p><b>Phone:</b> 053-385-2030</p>
     <p><b>Email:</b> BenjaminReinstein@gmail.com</p>
     <h2>Location</h2>
-    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.871587522533!2d35.2120!3d31.7719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzE4LjgiTiAzNcKwMTInNDMuMiJF!5e0!3m2!1sen!2sil!4v1700000000000" loading="lazy"></iframe>
+    <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.215574510344!2d35.2104!3d31.7719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzE4LjgiTiAzNcKwMTInMzcuNCJF!5e0!3m2!1sen!2sil!4v1620000000000!5m2!1sen!2sil" loading="lazy"></iframe>
   </div>
 </main>
+
 <footer style="background:#111;color:white;text-align:center;padding:25px; margin-top: 40px;">© 2025 Dr. Benjamin Reinstein</footer>
-<a href="https://wa.me/972533852030?text=Hi, I would like to book an appointment." class="whatsapp-float" target="_blank" onclick="trackWhatsApp()"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
+<a href="https://wa.me/972533852030?text=Hello, I would like to book an appointment." class="whatsapp-float" target="_blank" onclick="trackWhatsApp()"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
+
 <script>
 function openTab(evt, tabId) {
   document.querySelectorAll(".tab-content").forEach(c => c.classList.remove("active"));
